--- a/css/agency.css
+++ b/css/agency.css
@@ -1,7 +1,5 @@
 /*!
- * Start Bootstrap - Agency v4.1.1 (https://startbootstrap.com/template-overviews/agency)
- * Copyright 2013-2018 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-agency/blob/master/LICENSE)
+ * Copyright 2018
  */
 body {
   overflow-x: hidden;
@@ -196,7 +194,7 @@ header.masthead .intro-text .intro-lead-in {
 }
 
 header.masthead .intro-text .intro-heading {
-  font-size: 50px;
+  font-size: 20px;
   font-weight: 700;
   line-height: 50px;
   margin-bottom: 25px;
